--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
       var rows = [-1, -1, -1, -1, 2];
       var row = 0;
       var yy = 0;
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      var clicked = false;
+      var clicks = [];
       var lost = false;
       (function update() {
         // Delta
@@ -41,33 +39,32 @@
         lastFrameDate = frameDate;
         score.innerText = frameDate - firstFrameDate;
         // Draw
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         for (var i = 0; i < rows.length; ++i)
           ctx.fillRect(
             Math.floor(rows[(row + i) % rows.length] * canvas.width / 4),
-            Math.floor(yy + (3 - i) * canvas.height / 4),
+            Math.floor((yy + 3 - i) * canvas.height / 4),
             Math.floor(canvas.width / 4),
             Math.floor(canvas.height / 4.2)
           );
         // Advance
-        yy += 500 * delta;
-        while (yy > canvas.height / 4) {
-          yy -= canvas.height / 4;
-          var ignore = rows[row] == -1;
+        yy += 500 * delta / canvas.height * 4; // FIXME
+        while (yy > 1) {
+          yy -= 1;
+          var ignore = rows[row % rows.length] == -1;
+          if (!ignore)
+            lost = clicks.shift() != rows[row % rows.length];
           rows[row % rows.length] = Math.floor(Math.random() * 4);
           row += 1;
-          if (!clicked && !ignore)
-            lost = true;
-          clicked = false;
         }
         // Loop
         if (!lost)
           window.requestAnimationFrame(arguments.callee);
       })();
       canvas.addEventListener('click', function onTouch(e) {
-        clicked = Math.floor(e.clientX * 4 / canvas.width) == rows[row];
-        if (!clicked)
-          lost = true;
+        clicks.push(Math.floor(e.clientX * 4 / canvas.width));
       }, false);
     </script>
   </body>
