--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         color: white;
         font-family: monospace;
         font-size: 2em;
-        text-shadow: 0 0 .5em white, 0 0 .2em black;
       }
       #canvas {
         position: absolute;
@@ -18,7 +17,6 @@
         bottom: 0;
         left: 0;
         right: 0;
-        box-shadow: inset 0 5em 10em -5em black;
         background-color: #222;
       }
       #play {
@@ -50,12 +48,14 @@
         font-family: sans-serif;
       }
       #play button {
-        width: 80%;
         margin: 10%;
-        border: .1em solid white;
+        border: 0 none;
         color: white;
         background-color: transparent;
         font-size: 4em;
+      }
+      #play button:focus {
+        outline: 0;
       }
     </style>
   </head>
@@ -66,7 +66,7 @@
       <div>
         <h1>Roll</h1>
         <p>Tap the bubbles before they reach the bottom.</p>
-        <button id="playBtn">Play!</button>
+        <button id="playBtn">▶</button>
       </div>
     </div>
     <script>
@@ -77,6 +77,7 @@
       function setup() {
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
+        ctx.strokeStyle = 'white';
       }
       function home() {
         document.getElementById('play').style.display = 'block';
@@ -85,13 +86,14 @@
       function start() {
         gS.firstFrameDate = new Date();
         gS.lastFrameDate = gS.firstFrameDate;
-        gS.rows = [-1, -1, -1, -1, 2];
+        gS.divisions = 4;
+        gS.rows = [-1, -1, -1, -1, -1];
         gS.row = 0;
         gS.yy = 0;
         gS.clicks = [];
         gS.lost = false;
         gS.colors = [ 'blue', 'yellow', 'purple', 'red' ];
-        update();
+        window.requestAnimationFrame(update);
       }
       function update() {
         // Delta
@@ -104,27 +106,28 @@
         for (var i = 0; i < gS.rows.length; ++i) {
           var col = gS.rows[(gS.row + i) % gS.rows.length];
           ctx.fillStyle = gS.colors[col];
-          ctx.strokeStyle = 'white';
           ctx.beginPath();
           ctx.arc(
-            Math.floor((col + .5) * canvas.width / 4),
-            Math.floor((gS.yy + 3.5 - i) * canvas.height / 4),
-            Math.floor(canvas.width / 10),
+            Math.floor((col + .5) * canvas.width / gS.divisions),
+            Math.floor((gS.yy + gS.divisions - i - 1) * canvas.height / gS.divisions),
+            Math.floor(canvas.width / (2.5 * gS.divisions)),
             0,
             2 * Math.PI
           );
           ctx.fill();
           ctx.stroke();
         }
-        // Advance
-        gS.yy += 3 * delta; // FIXME
+        // Step
+        gS.yy += 3 * delta;
         while (gS.yy > 1) {
-          gS.yy -= 1;
-          var ignore = gS.rows[gS.row % gS.rows.length] == -1;
+          gS.yy--;
+          var icol = gS.row % gS.rows.length;
+          var col = gS.rows[icol];
+          var ignore = col == -1;
           if (!ignore)
-            gS.lost = gS.clicks.shift() != gS.rows[gS.row % gS.rows.length];
-          gS.rows[gS.row % gS.rows.length] = Math.floor(Math.random() * 4);
-          gS.row += 1;
+            gS.lost = gS.clicks.shift() != col;
+          gS.rows[icol] = Math.floor(Math.random() * gS.divisions);
+          gS.row++;
         }
         // Loop
         if (gS.lost)
@@ -133,7 +136,7 @@
           window.requestAnimationFrame(arguments.callee);
       }
       canvas.addEventListener('click', function onTouch(e) {
-        gS.clicks.push(Math.floor(e.clientX * 4 / canvas.width));
+        gS.clicks.push(Math.floor(e.clientX * gS.divisions / canvas.width));
       }, false);
       window.addEventListener('resize', function() {
         setup();
